--- a/HackNC/Info.plist
+++ b/HackNC/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Distress Call</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -33,6 +35,22 @@
 	<string>902403693182433</string>
 	<key>FacebookDisplayName</key>
 	<string>HackNCDemo</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fbapi20130214</string>
+		<string>fbapi20130410</string>
+		<string>fbapi20130702</string>
+		<string>fbapi20131010</string>
+		<string>fbapi20131219</string>
+		<string>fbapi20140410</string>
+		<string>fbapi20140116</string>
+		<string>fbapi20150313</string>
+		<string>fbapi20150629</string>
+		<string>fbauth</string>
+		<string>fbauth2</string>
+		<string>fb-messenger-api20140430</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -62,6 +80,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSContactsUsageDescription</key>
+	<string>The app needs to use your contacts.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>The app needs to use your location in background</string>
+	<key>NSLocationUsageDescription</key>
+	<string>The app needs to use your location to send your friends your location.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>The app needs to use your microphone to listen to your safe words.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -80,30 +106,6 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fbapi20130214</string>
-		<string>fbapi20130410</string>
-		<string>fbapi20130702</string>
-		<string>fbapi20131010</string>
-		<string>fbapi20131219</string>
-		<string>fbapi20140410</string>
-		<string>fbapi20140116</string>
-		<string>fbapi20150313</string>
-		<string>fbapi20150629</string>
-		<string>fbauth</string>
-		<string>fbauth2</string>
-		<string>fb-messenger-api20140430</string>
-	</array>
-	<key>NSLocationUsageDescription</key>
-	<string>The app needs to use your location to send your friends your location.</string>
-	<key>NSContactsUsageDescription</key>
-	<string>The app needs to use your contacts.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>The app needs to use your microphone to listen to your safe words.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>The app needs to use your location in background</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
